Fleshed out starting accumulo service