@@ -21,15 +21,14 @@ import aredee.mesos.frameworks.accumulo.state.FrameworkStateProtobufPersister;
 import aredee.mesos.frameworks.accumulo.framework.api.WebServer;
 import aredee.mesos.frameworks.accumulo.framework.guice.ApiServletModule;
 import aredee.mesos.frameworks.accumulo.framework.guice.ConfigurationModule;
+import aredee.mesos.frameworks.accumulo.initialize.AccumuloInitializer;
 import aredee.mesos.frameworks.accumulo.scheduler.Cluster;
 import aredee.mesos.frameworks.accumulo.scheduler.Scheduler;
+
 import com.google.inject.Guice;
 import com.google.inject.Injector;
 import com.google.inject.Stage;
-import org.apache.accumulo.core.conf.SiteConfiguration;
-import org.apache.accumulo.server.Accumulo;
-import org.apache.accumulo.server.conf.ServerConfiguration;
-import org.apache.accumulo.server.init.Initialize;
+
 import org.apache.commons.cli.CommandLine;
 import org.apache.mesos.MesosSchedulerDriver;
 import org.apache.mesos.Protos.FrameworkInfo;
@@ -65,7 +64,6 @@ public final class Main {
 
     public static void main(String[] args) {
 
-
         // initialize the config object
         CommandLine cmdLine = CommandLineClusterConfiguration.parseArgs(args);
         CommandLineClusterConfiguration.checkHelpOrVersion(cmdLine);  // early exit
@@ -81,8 +79,7 @@ public final class Main {
             LOGGER.info("Java Classpath: " + System.getProperty("java.class.path"));
             exitStatus = new Main().run(config, cmdLine.getArgs());
         } catch (Exception e) {
-            LOGGER.error("Unhandled exception encountered, exiting: " + e.getMessage());
-            e.printStackTrace();
+            LOGGER.error("Unhandled exception encountered, exiting: ", e);
         }
 
         LOGGER.info("Exiting Accumulo Framework with status: " + exitStatus);
@@ -97,42 +94,13 @@ public final class Main {
                 new ApiServletModule()
         );
 
-
         checkEnvironmentOrDie();
         startWebserverOrDie(injector);
-
-        LOGGER.info("Checking Framework State");
-        // Check Framework State to see if this is a failover framework.
-        LOGGER.info("Reading from ZooKeeperState: {}", config.getZkServers() );
-        org.apache.mesos.state.State frameworkState = new ZooKeeperState(config.getZkServers(), 60L, TimeUnit.SECONDS, "accumulo-mesos" );
-        FrameworkStateProtobufPersister stateProxy = new FrameworkStateProtobufPersister(frameworkState);
-        boolean frameworkExists = false;
-        String frameworkId = "";
-        String frameworkName = "";
-        LOGGER.info("Fetching frameworks from ZooKeeper");
-        for(Protos.FrameworkIdentity fid : stateProxy.getFrameworks()){
-            LOGGER.info("Found framework {} - {}", fid.getFrameworkName(), fid.getFrameworkId());
-            if( fid.getFrameworkName().equals(config.getFrameworkName()) ){
-                LOGGER.info("Found matching framework");
-                frameworkExists = true;
-                frameworkId = fid.getFrameworkId();
-                frameworkName = fid.getFrameworkName();
-                break;
-            }
-        }
-
-        String accumuloInstanceName = "";
-        if( frameworkExists ){
-            LOGGER.info("Found Existing Accumulo Instance");
-            accumuloInstanceName = stateProxy.getAccumuloInstanceName(frameworkId);
-        } else {
-            LOGGER.info("Framework not found, Initializing New Accumulo Instance");
-            accumuloInstanceName = initializeAccumuloInstance(config);
-
-            //TODO save new instance info to Framework State
-            frameworkName = config.getFrameworkName();
-        }
-
+        
+        // Initializes accumulo or gets the instance from the state store if one exists.
+        //
+        AccumuloInitializer accumuloInitializer = new AccumuloInitializer(config);
+   
         // TODO reconcile registered frameworks with framework name saved here.
         //     If name exists, grab the ID and pass that
         //     into the the framework info when creating the scheduler driver.
@@ -141,15 +109,14 @@ public final class Main {
         // Start the schedulerDriver
         LOGGER.info("Initializing mesos-accumulo Scheduler");
         String master = config.getMesosMaster();
-        config.setAccumuloInstanceName(accumuloInstanceName);
 
-        Cluster cluster = new Cluster(frameworkState, config);
+        Cluster cluster = new Cluster(accumuloInitializer.getFrameworkState(), config);
 
         org.apache.mesos.Scheduler scheduler = new Scheduler(cluster);
 
         FrameworkInfo frameworkInfo = FrameworkInfo.newBuilder()
-                .setId(createMesosFrameworkID(frameworkId)) // empty string creates new random name
-                .setName(frameworkName)
+                .setId(createMesosFrameworkID(accumuloInitializer.getFrameworkId())) // empty string creates new random name
+                .setName(accumuloInitializer.getFrameworkName())
                 .setCheckpoint(true)
                 .setHostname("") // let mesos set to current hostname
                 .setUser("")  // empty string is current user of mesos process
@@ -161,8 +128,11 @@ public final class Main {
 
         LOGGER.info("Running mesos-accumulo SchedulerDriver");
         final int status;
+        
         // run() blocks until driver finishes somehow
-        switch (schedulerDriver.run()) {
+        org.apache.mesos.Protos.Status driverStatus = schedulerDriver.run();
+        
+        switch (driverStatus) {
             case DRIVER_STOPPED:
                 status = 0;
                 break;
@@ -176,6 +146,7 @@ public final class Main {
                 status = 3;
                 break;
         }
+        LOGGER.info("mesos-accumulo stopped with status " + driverStatus.name());
 
         webServer.stop();
 
@@ -199,8 +170,7 @@ public final class Main {
             webServer.start();
         } catch (Exception e) {
             //TODO throw some webserver fail exception?
-            LOGGER.error("Failed to instantiate webservice.");
-            e.printStackTrace();
+            LOGGER.error("Failed to instantiate webservice.", e);
             System.exit(-1);
         }
         this.webServer = webServer;
@@ -220,223 +190,4 @@ public final class Main {
             System.exit(-1);
         }
     }
-
-    private String initializeAccumuloInstance(ClusterConfiguration config){
-        // run accumulo init procedure
-        LOGGER.info("Writing accumulo-site.xml");
-        File accumuloSiteFile = writeAccumuloSiteClasspathsOrDie();
-
-        String accumuloInstanceName = config.getAccumuloInstanceName();
-        LinkedList<String> initArgs  = new LinkedList<>();
-        initArgs.add("--instance-name");
-        initArgs.add(accumuloInstanceName);
-        // TODO handle SASL see MiniAccumuloClusterImpl
-        initArgs.add("--password");
-        initArgs.add(config.getAccumuloRootPassword());
-
-
-        ProcessConfiguration processConfiguration = new ProcessConfiguration();
-        AccumuloProcessFactory processFactory = new AccumuloProcessFactory(processConfiguration);
-        File accumuloConfDir = accumuloSiteFile.getParentFile();
-        File hadoopConfDir = new File(System.getenv(Environment.HADOOP_CONF_DIR));
-
-        processConfiguration.setDir(accumuloConfDir.getParentFile());
-        processConfiguration.setClientConfFile(accumuloConfDir);
-        processConfiguration.setLibDir(new File(processConfiguration.getDir(), "lib"));
-        processConfiguration.setLibExtDir(new File(processConfiguration.getLibDir(), "ext"));
-        processConfiguration.setLogDir(new File(processConfiguration.getDir(), "logs"));
-        processConfiguration.setConfDir(accumuloConfDir);
-        processConfiguration.setHadoopConfDir(hadoopConfDir);
-
-        Process initProcess = null;
-        try {
-            initProcess = processFactory.exec(Initialize.class, null, initArgs.toArray(new String[initArgs.size()]));
-            initProcess.waitFor();
-            LOGGER.info("New Accumulo instance initialized");
-        } catch (IOException ioe) {
-            LOGGER.error("IOException while trying to initialize Accumulo", ioe);
-            System.exit(-1);
-        } catch (InterruptedException ie) {
-            LOGGER.error("Init process was interrupted", ie);
-            System.exit(-1);
-        }
-        //Initialize.main(initArgs.toArray(new String[initArgs.size()]));
-
-
-        return accumuloInstanceName;
-    }
-
-    private File writeAccumuloSiteClasspathsOrDie() {
-
-        File accumuloSiteFile = null;
-
-        try {
-
-            DocumentBuilderFactory docFactory = DocumentBuilderFactory.newInstance();
-            DocumentBuilder docBuilder = docFactory.newDocumentBuilder();
-
-            Document doc = docBuilder.newDocument();
-            Element rootElement = doc.createElement("configuration");
-            doc.appendChild(rootElement);
-
-            Element propertyElement = doc.createElement("property");
-            rootElement.appendChild(propertyElement);
-
-            Element nameElement = doc.createElement("name");
-            nameElement.appendChild(doc.createTextNode("general.classpaths"));
-            propertyElement.appendChild(nameElement);
-
-            Element valueElement = doc.createElement("value");
-            valueElement.appendChild(doc.createTextNode(getGeneralClasspathsLiteral()));
-            propertyElement.appendChild(valueElement);
-
-            TransformerFactory transformerFactory = TransformerFactory.newInstance();
-            Transformer transformer = transformerFactory.newTransformer();
-            DOMSource source = new DOMSource(doc);
-
-            String accumulo_home = System.getenv(Environment.ACCUMULO_HOME);
-            accumuloSiteFile = new File(accumulo_home + File.separator +
-                    "conf" + File.separator + "accumulo-site.xml");
-            StreamResult result = new StreamResult(accumuloSiteFile);
-
-            transformer.transform(source, result);
-
-        } catch (ParserConfigurationException e) {
-            logErrorAndDie("Error Creating accumulo-site.xml\n" +
-                            e.getMessage());
-            e.printStackTrace();
-        } catch (TransformerConfigurationException e) {
-            logErrorAndDie("Error Creating accumulo-site.xml\n" +
-                            e.getMessage());
-            e.printStackTrace();
-        } catch (TransformerException e) {
-            logErrorAndDie("Error Creating accumulo-site.xml\n" +
-                            e.getMessage());
-            e.printStackTrace();
-        }
-
-        return accumuloSiteFile;
-    }
-
-    private void logErrorAndDie(String message){
-        LOGGER.error(message);
-        System.exit(-1);
-    }
-
-    private static final String getGeneralClasspathsLiteral(){
-        return (new StringBuilder())
-                .append("\n$ACCUMULO_HOME/lib/accumulo-server.jar,\n")
-                .append("$ACCUMULO_HOME/lib/accumulo-core.jar,\n")
-                .append("$ACCUMULO_HOME/lib/accumulo-start.jar,\n")
-                .append("$ACCUMULO_HOME/lib/accumulo-fate.jar,\n")
-                .append("$ACCUMULO_HOME/lib/accumulo-proxy.jar,\n")
-                .append("$ACCUMULO_HOME/lib/[^.].*.jar,\n")
-                .append("$ZOOKEEPER_HOME/zookeeper[^.].*.jar,\n")
-                .append("$HADOOP_CONF_DIR,\n")
-                .append("$HADOOP_PREFIX/share/hadoop/common/[^.].*.jar,\n")
-                .append("$HADOOP_PREFIX/share/hadoop/common/lib/(?!slf4j)[^.].*.jar,\n")
-                .append("$HADOOP_PREFIX/share/hadoop/hdfs/[^.].*.jar,\n")
-                .append("$HADOOP_PREFIX/share/hadoop/mapreduce/[^.].*.jar,\n")
-                .append("$HADOOP_PREFIX/share/hadoop/yarn/[^.].*.jar,\n")
-                .append("/usr/lib/hadoop/[^.].*.jar,\n")
-                .append("/usr/lib/hadoop/lib/[^.].*.jar,\n")
-                .append("/usr/lib/hadoop-hdfs/[^.].*.jar,\n")
-                .append("/usr/lib/hadoop-mapreduce/[^.].*.jar,\n")
-                .append("/usr/lib/hadoop-yarn/[^.].*.jar,\n")
-                .append("$HADOOP_PREFIX/[^.].*.jar,\n")
-                .append("$HADOOP_PREFIX/lib/(?!slf4j)[^.].*.jar\n")
-                .toString();
-    }
-
-/*
- * Useful code from MiniAccumuloClusterImpl.java
- *
-    private Process exec(Class<?> clazz, String... args) throws IOException {
-        return exec(clazz, null, args);
-    }
-
-    private Process exec(Class<?> clazz, List<String> jvmArgs, String... args) throws IOException {
-        ArrayList<String> jvmArgs2 = new ArrayList<String>(1 + (jvmArgs == null ? 0 : jvmArgs.size()));
-        jvmArgs2.add("-Xmx" + config.getDefaultMemory());
-        if (jvmArgs != null)
-            jvmArgs2.addAll(jvmArgs);
-        Process proc = _exec(clazz, jvmArgs2, args);
-        cleanup.add(proc);
-        return proc;
-    }
-
-    private Process _exec(Class<?> clazz, List<String> extraJvmOpts, String... args) throws IOException {
-        String javaHome = System.getProperty("java.home");
-        String javaBin = javaHome + File.separator + "bin" + File.separator + "java";
-        String classpath = getClasspath();
-
-        String className = clazz.getName();
-
-        ArrayList<String> argList = new ArrayList<String>();
-        argList.addAll(Arrays.asList(javaBin, "-Dproc=" + clazz.getSimpleName(), "-cp", classpath));
-        argList.addAll(extraJvmOpts);
-        for (Map.Entry<String,String> sysProp : config.getSystemProperties().entrySet()) {
-            argList.add(String.format("-D%s=%s", sysProp.getKey(), sysProp.getValue()));
-        }
-        // @formatter:off
-        argList.addAll(Arrays.asList(
-                "-XX:+UseConcMarkSweepGC",
-                "-XX:CMSInitiatingOccupancyFraction=75",
-                "-Dapple.awt.UIElement=true",
-                "-Djava.net.preferIPv4Stack=true",
-                "-XX:+PerfDisableSharedMem",
-                "-XX:+AlwaysPreTouch",
-                org.apache.accumulo.start.Main.class.getName(), className));
-        // @formatter:on
-        argList.addAll(Arrays.asList(args));
-
-        ProcessBuilder builder = new ProcessBuilder(argList);
-
-        builder.environment().put("ACCUMULO_HOME", config.getDir().getAbsolutePath());
-        builder.environment().put("ACCUMULO_LOG_DIR", config.getLogDir().getAbsolutePath());
-        builder.environment().put("ACCUMULO_CLIENT_CONF_PATH", config.getClientConfFile().getAbsolutePath());
-        String ldLibraryPath = Joiner.on(File.pathSeparator).join(config.getNativeLibPaths());
-        builder.environment().put("LD_LIBRARY_PATH", ldLibraryPath);
-        builder.environment().put("DYLD_LIBRARY_PATH", ldLibraryPath);
-
-        // if we're running under accumulo.start, we forward these env vars
-        String env = System.getenv("HADOOP_PREFIX");
-        if (env != null)
-            builder.environment().put("HADOOP_PREFIX", env);
-        env = System.getenv("ZOOKEEPER_HOME");
-        if (env != null)
-            builder.environment().put("ZOOKEEPER_HOME", env);
-        builder.environment().put("ACCUMULO_CONF_DIR", config.getConfDir().getAbsolutePath());
-        // hadoop-2.2 puts error messages in the logs if this is not set
-        builder.environment().put("HADOOP_HOME", config.getDir().getAbsolutePath());
-        if (config.getHadoopConfDir() != null)
-            builder.environment().put("HADOOP_CONF_DIR", config.getHadoopConfDir().getAbsolutePath());
-
-        Process process = builder.start();
-
-        LogWriter lw;
-        lw = new LogWriter(process.getErrorStream(), new File(config.getLogDir(), clazz.getSimpleName() + "_" + process.hashCode() + ".err"));
-        logWriters.add(lw);
-        lw.start();
-        lw = new LogWriter(process.getInputStream(), new File(config.getLogDir(), clazz.getSimpleName() + "_" + process.hashCode() + ".out"));
-        logWriters.add(lw);
-        lw.start();
-
-        return process;
-    }
-
-    Process _exec(Class<?> clazz, ServerType serverType, String... args) throws IOException {
-
-        List<String> jvmOpts = new ArrayList<String>();
-        jvmOpts.add("-Xmx" + config.getMemory(serverType));
-
-        if (config.isJDWPEnabled()) {
-            Integer port = PortUtils.getRandomFreePort();
-            jvmOpts.addAll(buildRemoteDebugParams(port));
-            debugPorts.add(new Pair<ServerType,Integer>(serverType, port));
-        }
-        return _exec(clazz, jvmOpts, args);
-    }
-
-*/
 }
